Fixed rules alignment

--- a/client/css/Home.css
+++ b/client/css/Home.css
@@ -32,6 +32,8 @@ ul {
 	text-align: justify;
 	font-family: Calibri;
 	list-style-type: none;
+	width: 800px;
+	padding-left: 0px;
 }
 
 p {
